@@ -1,3 +1,8 @@
+2001-09-29  Bruno Haible  <haible@clisp.cons.org>
+
+	* hostname.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2001-10-10  Bruno Haible  <haible@clisp.cons.org>
 
 	* javacomp.m4 (gt_JAVACOMP): Ignore gcj version 2.xx, require at least
