@@ -1,3 +1,9 @@
+2001-09-29  Bruno Haible  <haible@clisp.cons.org>
+
+	* hostname.c: New file.
+	* Makefile.am (noinst_PROGRAMS, hostname_SOURCES): New variables.
+	(install-exec-local, installdirs-local, uninstall-local): New rules.
+
 2001-10-10  Bruno Haible  <haible@clisp.cons.org>
 
 	* msgexec.c (process_string): Update for changed create_pipe_bidi(),
